add english translation

--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -181,7 +181,7 @@
         }
 
         &::before {
-          content: "Kontakt";
+          content: "Contact";
           color: $fun-blue;
           font-weight: bold;
           display: inline-flex;
