--- a/scss/pages/_technologies-gas--mixture.scss
+++ b/scss/pages/_technologies-gas--mixture.scss
@@ -18,13 +18,13 @@
     width: 100%;
     position: relative;
 
-      &::before {
-        content: url("../images/shape02.svg");
-        width: 100%;
-        position: absolute;
-        top: 0;
-        z-index: -1;
-      }
+    &::before {
+      content: url("../images/shape02.svg");
+      width: 100%;
+      position: absolute;
+      top: 0;
+      z-index: -1;
+    }
   }
 
   &--img {
@@ -51,12 +51,16 @@
       justify-content: space-between;
     }
 
+    @media #{$desktop__1280} {
+      padding: rem(0 40px);
+    }
+
     @media #{$large__screens__1440} {
-      padding: rem(0 100px);
+      padding: rem(0 60px);
     }
 
     @media #{$full__screens__1600} {
-      padding: rem(0 120px);
+      padding: rem(0 80px);
     }
 
     @media #{$HD__screens__1920} {
