--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -52,15 +52,15 @@
     }
 
     @media #{$desktop__1280} {
-      padding: rem(0 80px);
+      padding: rem(0 60px);
     }
 
     @media #{$large__screens__1440} {
-      padding: rem(0 100px);
+      padding: rem(0 80px);
     }
 
     @media #{$full__screens__1600} {
-      padding: rem(0 120px);
+      padding: rem(0 100px);
     }
 
     @media #{$HD__screens__1920} {
@@ -229,15 +229,15 @@
       @media #{$desktop__1280} {
         text-align: left;
         font-size: rem(45px);
-        padding: rem(0 0 0 60px);
+        padding: rem(0 0 0 40px);
       }
 
       @media #{$large__screens__1440} {
-        padding: rem(0 0 0 100px);
+        padding: rem(0 0 0 60px);
       }
 
       @media #{$full__screens__1600} {
-        padding: rem(0 0 0 120px);
+        padding: rem(0 0 0 80px);
       }
 
       @media #{$HD__screens__1920} {
@@ -913,9 +913,9 @@
         padding: rem(0 60px);
       }
 
-      @media #{$desktop__1280} {
-        padding: rem(0 100px);
-      }
+      //@media #{$desktop__1280} {
+      //  padding: rem(0 60px);
+      //}
 
       @media #{$large__screens__1440} {
         padding: rem(0 150px);
@@ -965,7 +965,7 @@
 
             &:hover {
               filter: invert(1) sepia(0) saturate(0) hue-rotate(0deg)
-                brightness(2);
+              brightness(2);
             }
           }
 
@@ -982,7 +982,7 @@
 
             & .main__why-container__tabs-el__link {
               filter: invert(1) sepia(0) saturate(0) hue-rotate(0deg)
-                brightness(2);
+              brightness(2);
             }
           }
 
@@ -1440,9 +1440,9 @@
       &::after {
         content: "";
         background: linear-gradient(
-          to right,
-          rgba(255, 255, 255, 1) 0%,
-          rgba(255, 255, 255, 0) 100%
+                        to right,
+                        rgba(255, 255, 255, 1) 0%,
+                        rgba(255, 255, 255, 0) 100%
         );
 
         height: 120px;
@@ -1586,7 +1586,7 @@
       }
 
       @media #{$full__screens__1600} {
-        padding: rem(80px 120px 0);
+        padding: rem(80px 100px 0);
       }
 
       @media #{$HD__screens__1920} {
@@ -1616,7 +1616,7 @@
       @media #{$desktop__1280} {
         font-size: rem(45px);
         text-align: left;
-        padding: rem(40px 60px 80px);
+        padding: rem(40px 40px 80px);
       }
 
       @media #{$large__screens__1440} {
@@ -1645,11 +1645,11 @@
 
       @media #{$desktop__1280} {
         justify-content: space-between;
-        padding: rem(0 80px);
+        padding: rem(0 60px);
       }
 
       @media #{$large__screens__1440} {
-        padding: rem(0 100px);
+        padding: rem(0 80px);
       }
 
       @media #{$full__screens__1600} {
@@ -2001,14 +2001,6 @@
 //    padding: rem(0 40px);
 //  }
 //}
-
-
-
-
-
-
-
-
 
 @media #{$tablet__768} {
 }
